--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "terminal.integrated.localEchoStyle": "dim"
+	"terminal.integrated.localEchoStyle": "dim",
+	"[css]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	}
 }
